/**
 * 
 */
package com.parking.models;

/**
 * 
 */
public enum UserRole {
	ADMIN,STAFF //Quan tri vien va nhan vien van hanh
}
